2001-08-13  Paul Eggert  <eggert@twinsun.com>

	* Makefile.am (unlocked-io.h): Do not append "_unlocked" twice.
	Port to Solaris 8, where 'sed' requires a space after the 'r'
	command, and where sh dislikes "$/".  Clean up the spacing a bit.
	Redirect output to $tmp just once.

2001-08-12  Paul Eggert  <eggert@sic.twinsun.com>

	* lib/addext.c (<errno.h>): Include.
	(errno): Declare if not defined.
	(addext): Work correctly when pathconf returns -1 and leaves
	errno alone because there is no limit.  Also, work even if
	pathconf returns a value greater than SIZE_MAX.

2001-08-12  Jim Meyering  <meyering@lucent.com>

	* xgetcwd.c (xgetcwd) [defined __GLIBC__ && __GLIBC__ >= 2]:
	Simply `return getcwd (NULL, 0);'.
	[! (defined __GLIBC__ && __GLIBC__ >= 2)]:
	Use 1300 as initial value for length, not PATH_MAX.

	* pathmax.h: Clean up cpp syntax.

2001-08-12  Jim Meyering  <meyering@lucent.com>

	* gettimeofday.c: New file.
	* gtod.h: New file.
	* Makefile.am (libfetish_a_SOURCES): Add gtod.h.

2001-08-04  Jim Meyering  <meyering@lucent.com>

	* error.h (__attribute__): Remove `|| __STRICT_ANSI__' from #if stmt,
	to get in sync with glibc.

2001-08-03  Paul Eggert  <eggert@twinsun.com>

	The following changes are from gettext 0.10.39 as maintained by
	Bruno Haible.

	* mbswidth.h (MBSW_REJECT_UNPRINTABLE, MBSW_REJECT_INVALID):
	Renamed from MBSW_ACCEPT_UNPRINTABLE and MBSW_ACCEPT_INVALID
	with inverted sense.  All uses changed.

	* mbswidth.c: Don't include <limits.h>.
	Include <stdlib.h> and <string.h> unconditionally.
	(iswcntrl, mbsinit, ISCNTRL): New macros.
	(mbsnwidth): Use K&R style function declarations.
	Don't bother checking for MB_LEN_MAX == 1, since the compiler
	can optimize it when MB_CUR_MAX == 1.
	The width of control characters is zero, not 1.

2001-07-15  Jim Meyering  <meyering@lucent.com>

	* Makefile.am (EXTRA_DIST): Add unlocked-io.hin.
	(BUILT_SOURCES): Add unlocked-io.h.
	(io_functions): Define.
	(unlocked-io.h): New rule.